fixed the modal window

--- a/index.html
+++ b/index.html
@@ -1630,7 +1630,7 @@
               >
                 <option disabled selected value="">Вакансия</option>
                 <option value="модель">Модель видеочата</option>
-                <option value="спамер">Оператор спам-отдела</option>
+                <option value="спамер">Рекрутер</option>
                 <option value="набор персонала">
                   Агент по набору персонала
                 </option>
@@ -1644,7 +1644,10 @@
               >
                 <option disabled selected value="">Город</option>
                 <option value="Саратов">Саратов</option>
+                <option value="Саратов">Самара</option>
                 <option value="Пенза">Пенза</option>
+                <option value="Саратов">Нижний Новгород</option>
+                <option value="Саратов">Калининград</option>
                 <option value="Воронеж">Воронеж</option>
                 <option value="Дзержинск">Дзержинск</option>
               </select>
