adapted the map for different devices

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container center">
         <div class="info">info</div>
         <svg
           id="svg-map"
