--- a/index.html
+++ b/index.html
@@ -1536,12 +1536,14 @@
               всем вопросам:
             </p>
             <p class="footer__contact">
-              <a href="job@hqmodels.ru" class="footer__mail">job@hqmodels.ru</a>
+              <a href="mailto: job@hqmodels.ru" class="footer__mail"
+                >job@hqmodels.ru</a
+              >
             </p>
             <p class="footer__social">
-              <a href="#" target="_blank" class="footer__soc-btn"
+              <!-- <a href="#" target="_blank" class="footer__soc-btn"
                 ><i class="fa fa-vk" aria-hidden="true"></i
-              ></a>
+              ></a> -->
               <a
                 href="https://www.instagram.com/hqmodels_/"
                 target="_blank"
@@ -1576,7 +1578,7 @@
               >Вакансии</a
             >
             <p class="footer__copyright">
-              © 2020 hqmodels.com - All Rights Reserved
+              © 2024 hqmodels.com - All Rights Reserved
             </p>
           </div>
         </div>
