--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         </div>
       </div>
       <div class="container center">
-        <div class="info">info</div>
+        <div id="tooltip" class="info">info</div>
         <svg
           id="svg-map"
           width="1920"
