--- a/index.html
+++ b/index.html
@@ -1536,8 +1536,8 @@
               всем вопросам:
             </p>
             <p class="footer__contact">
-              <a href="mailto: job@hqmodels.ru" class="footer__mail"
-                >job@hqmodels.ru</a
+              <a href="mailto: job@hqmodels.studio" class="footer__mail"
+                >job@hqmodels.studio</a
               >
             </p>
             <p class="footer__social">
@@ -1578,7 +1578,7 @@
               >Вакансии</a
             >
             <p class="footer__copyright">
-              © 2024 hqmodels.com - All Rights Reserved
+              © 2024 hqmodels.site - All Rights Reserved
             </p>
           </div>
         </div>
@@ -1644,7 +1644,7 @@
                 name="city"
                 required
               >
-                <option disabled selected value="">Город</option>
+                <option disabled selected value="Город">Город</option>
                 <option value="Саратов">Саратов</option>
                 <option value="Саратов">Самара</option>
                 <option value="Пенза">Пенза</option>
@@ -1670,6 +1670,7 @@
     <script src="js/jquery.scrollme.min.js?ver=1.01"></script>
     <script src="js/jquery.appear.min.js?ver=1.01"></script>
     <script src="js/main.js?ver=1.01"></script>
-    <script src="//code-ya.jivosite.com/widget/L0hxNO8lci" async></script>
+    <script src="//code.jivosite.com/widget/t4IugUqoYP" async></script>
+
   </body>
 </html>
