setting modal page

--- a/index.html
+++ b/index.html
@@ -1630,7 +1630,7 @@
                 name="vacancy"
                 required
               >
-                <option disabled selected value="">Вакансия</option>
+                <option disabled selected value="Вакансия">Вакансия</option>
                 <option value="модель">Модель видеочата</option>
                 <option value="спамер">Рекрутер</option>
                 <option value="набор персонала">
@@ -1671,6 +1671,5 @@
     <script src="js/jquery.appear.min.js?ver=1.01"></script>
     <script src="js/main.js?ver=1.01"></script>
     <script src="//code.jivosite.com/widget/t4IugUqoYP" async></script>
-
   </body>
 </html>
