adaptive cards comment

--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@
       <a href="#conditions" class="menu__item scrollto">Условия</a>
       <a href="#duties" class="menu__item scrollto">О работе</a>
       <a href="#vacancies" class="menu__item menu--last scrollto">Вакансии</a>
-      <a href="#feedback" class="menu__item menu--last scrollto">Отзывы</a>
       <a
         href="#"
         class="btn menu__request-btn visible-xs"
@@ -1524,7 +1523,7 @@
         </div>
       </div>
     </section>
-    <section class="vacancies" id="feedback">
+    <section class="vacancies vacancies__feedback" id="feedback">
       <div class="vacancies__line"></div>
       <div class="vacancies__circle1"></div>
       <div class="vacancies__circle2"></div>
@@ -1611,7 +1610,7 @@
               </p>
             </li>
           </ul>
-          <ul class="cards">
+          <ul class="cards cards_second">
             <li class="card">
               <h1>Comment Card 1</h1>
 
