--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
       <a href="#conditions" class="menu__item scrollto">Условия</a>
       <a href="#duties" class="menu__item scrollto">О работе</a>
       <a href="#vacancies" class="menu__item menu--last scrollto">Вакансии</a>
+      <a href="#faq" class="menu__item menu--last scrollto">FAQ</a>
       <a
         href="#"
         class="btn menu__request-btn visible-xs"
@@ -224,6 +225,7 @@
             >Вакансии</a
           >
           <a href="#feedback" class="menu__item menu--last scrollto">Отзывы</a>
+          <a href="#faq" class="menu__item menu--last scrollto">FAQ</a>
           <a
             href="#"
             class="btn menu__request-btn visible-xs"
