fix card comment

--- a/index.html
+++ b/index.html
@@ -1831,7 +1831,7 @@
               >Вакансии</a
             >
             <p class="footer__copyright">
-              © 2024 hqmodels.site - All Rights Reserved
+              © 2024 hqmodels.studio - All Rights Reserved
             </p>
           </div>
         </div>
