add img feedback

--- a/index.html
+++ b/index.html
@@ -1542,7 +1542,8 @@
             <li class="card">
               <h1>Comment Card 1</h1>
 
-              <p>
+              <img src="/img/feedback_img/feedback__1.jpg" alt="" />
+              <!-- <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Praesent bibendum, lorem vel tincidunt imperdiet, nibh elit
                 laoreet felis, a bibendum nisl tortor non orci. Donec pretium
@@ -1556,11 +1557,13 @@
                 pellentesque risus in ullamcorper. Nam neque nunc, mattis vitae
                 ornare ut, feugiat a erat. Ut tempus iaculis augue vel
                 pellentesque.
-              </p>
+              </p> -->
             </li>
             <li class="card">
               <h1>Comment Card 2</h1>
+              <img src="/img/feedback_img/feedback__2.jpg" alt="" />
 
+              <!-- 
               <p>
                 Vestibulum nunc massa, gravida quis porta nec, feugiat id metus.
                 Nunc ac arcu dolor, quis vestibulum leo. Cras viverra mollis
@@ -1571,12 +1574,13 @@
                 odio metus. Morbi adipiscing ultricies posuere. Pellentesque
                 elementum porttitor eros in molestie. Maecenas ut leo quis nisi
                 tempor tincidunt.
-              </p>
+              </p> -->
             </li>
             <li class="card">
               <h1>Comment Card 3</h1>
+              <img src="/img/feedback_img/feedback__3.jpg" alt="" />
 
-              <p>
+              <!-- <p>
                 Donec nunc ligula, vulputate quis mollis eu, interdum quis
                 libero. Donec nulla ante, facilisis sit amet vulputate at,
                 tincidunt a velit. Maecenas vestibulum, nulla sed tincidunt
@@ -1590,12 +1594,13 @@
                 neque rutrum dignissim. Nulla eros nisl, venenatis quis rhoncus
                 sit amet, molestie nec nisl. Pellentesque vel neque sapien, et
                 sagittis nulla.
-              </p>
+              </p> -->
             </li>
             <li class="card">
               <h1>Comment Card 4</h1>
+              <img src="/img/feedback_img/feedback__4.jpg" alt="" />
 
-              <p>
+              <!-- <p>
                 Donec nunc ligula, vulputate quis mollis eu, interdum quis
                 libero. Donec nulla ante, facilisis sit amet vulputate at,
                 tincidunt a velit. Maecenas vestibulum, nulla sed tincidunt
@@ -1609,14 +1614,15 @@
                 neque rutrum dignissim. Nulla eros nisl, venenatis quis rhoncus
                 sit amet, molestie nec nisl. Pellentesque vel neque sapien, et
                 sagittis nulla.
-              </p>
+              </p> -->
             </li>
           </ul>
           <ul class="cards cards_second">
             <li class="card">
               <h1>Comment Card 1</h1>
+              <img src="/img/feedback_img/feedback__5.jpg" alt="" />
 
-              <p>
+              <!-- <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Praesent bibendum, lorem vel tincidunt imperdiet, nibh elit
                 laoreet felis, a bibendum nisl tortor non orci. Donec pretium
@@ -1630,12 +1636,13 @@
                 pellentesque risus in ullamcorper. Nam neque nunc, mattis vitae
                 ornare ut, feugiat a erat. Ut tempus iaculis augue vel
                 pellentesque.
-              </p>
+              </p> -->
             </li>
             <li class="card">
               <h1>Comment Card 2</h1>
+              <img src="/img/feedback_img/feedback__6.jpg" alt="" />
 
-              <p>
+              <!-- <p>
                 Vestibulum nunc massa, gravida quis porta nec, feugiat id metus.
                 Nunc ac arcu dolor, quis vestibulum leo. Cras viverra mollis
                 ipsum, non rhoncus lectus aliquam et. Morbi faucibus purus sit
@@ -1645,12 +1652,13 @@
                 odio metus. Morbi adipiscing ultricies posuere. Pellentesque
                 elementum porttitor eros in molestie. Maecenas ut leo quis nisi
                 tempor tincidunt.
-              </p>
+              </p> -->
             </li>
             <li class="card">
               <h1>Comment Card 3</h1>
+              <img src="/img/feedback_img/feedback__7.jpg" alt="" />
 
-              <p>
+              <!-- <p>
                 Donec nunc ligula, vulputate quis mollis eu, interdum quis
                 libero. Donec nulla ante, facilisis sit amet vulputate at,
                 tincidunt a velit. Maecenas vestibulum, nulla sed tincidunt
@@ -1664,7 +1672,7 @@
                 neque rutrum dignissim. Nulla eros nisl, venenatis quis rhoncus
                 sit amet, molestie nec nisl. Pellentesque vel neque sapien, et
                 sagittis nulla.
-              </p>
+              </p> -->
             </li>
             <li class="card">
               <h1>Comment Card 4</h1>
