--- a/index.html
+++ b/index.html
@@ -1540,24 +1540,24 @@
         <div class="card__box">
           <ul class="card__first cards">
             <li class="card">
-              <img src="/img/feedback_img/feedback__1.jpg" alt="" />
+              <img src="https://i.ibb.co/0Yt15Jp/feedback-1.jpg" alt="" />
             </li>
             <li class="card">
-              <img src="/img/feedback_img/feedback__4.jpg" alt="" />
+              <img src="https://i.ibb.co/tPWrLjk/feedback-4.jpg" alt="" />
             </li>
           </ul>
           <ul class="cards cards_second">
             <li class="card">
-              <img src="/img/feedback_img/feedback__5.jpg" alt="" />
+              <img src="https://i.ibb.co/SBKrTFw/feedback-5.jpg" alt="" />
             </li>
             <li class="card">
-              <img src="/img/feedback_img/feedback__6.jpg" alt="" />
+              <img src="https://i.ibb.co/vQtDG4S/feedback-6.jpg" alt="" />
             </li>
             <li class="card">
-              <img src="/img/feedback_img/feedback__7.jpg" alt="" />
+              <img src="https://i.ibb.co/jkmv6db/feedback-7.jpg" alt="" />
             </li>
             <li class="card">
-              <img src="/img/feedback_img/feedback__3.jpg" alt="" />
+              <img src="https://i.ibb.co/zh4Hy2D/feedback-3.jpg" alt="" />
             </li>
           </ul>
         </div>
