rename first vacansie

--- a/index.html
+++ b/index.html
@@ -1758,7 +1758,7 @@
                 required
               >
                 <option disabled selected value="Вакансия">Вакансия</option>
-                <option value="модель">Модель видеочата</option>
+                <option value="модель">Ведущая прямых трансляций</option>
                 <option value="спамер">Рекрутер</option>
                 <option value="набор персонала">
                   Агент по набору персонала
