--- a/index.html
+++ b/index.html
@@ -1271,7 +1271,7 @@
                 <div class="vacancies__img vacancies--img1 visible-xs"></div>
                 <div class="row">
                   <div class="col-lg-7 col-sm-8 vacancies__col-left">
-                    <h3 class="vacancies__h3">Модель видеочата</h3>
+                    <h3 class="vacancies__h3">Ведущая прямых трансляций</h3>
                     <p class="vacancies__p">
                       <span class="bb">Приметы:</span>
                       <br class="hidden-xs" />Милая девушка от 18 до 35 лет.
