add comment and faq

--- a/index.html
+++ b/index.html
@@ -1537,29 +1537,19 @@
           ><span class="c-ff9bc9">з</span><span class="c-fda6da">ы</span
           ><span class="c-f6acdf">в</span><span class="c-ebb0d9">ы</span>
         </h2>
-        <div class="card__box">
-          <ul class="card__first cards">
-            <li class="card">
-              <img src="https://i.ibb.co/0Yt15Jp/feedback-1.jpg" alt="" />
-            </li>
-            <li class="card">
-              <img src="https://i.ibb.co/tPWrLjk/feedback-4.jpg" alt="" />
-            </li>
-            <li class="card">
-              <img src="https://i.ibb.co/SBKrTFw/feedback-5.jpg" alt="" />
-            </li>
-          </ul>
-          <ul class="cards cards_second">
-            <li class="card">
-              <img src="https://i.ibb.co/jkmv6db/feedback-7.jpg" alt="" />
-            </li>
-            <li class="card">
-              <img src="https://i.ibb.co/vQtDG4S/feedback-6.jpg" alt="" />
-            </li>
-            <li class="card">
-              <img src="https://i.ibb.co/zh4Hy2D/feedback-3.jpg" alt="" />
-            </li>
-          </ul>
+        <div id="containerphoto">
+          <div class="photobanner">
+            <img
+              class="first"
+              src="https://i.ibb.co/0Yt15Jp/feedback-1.jpg"
+              alt=""
+            />
+            <img src="https://i.ibb.co/tPWrLjk/feedback-4.jpg" alt="" />
+            <img src="https://i.ibb.co/SBKrTFw/feedback-5.jpg" alt="" />
+            <img src="https://i.ibb.co/jkmv6db/feedback-7.jpg" alt="" />
+            <img src="https://i.ibb.co/vQtDG4S/feedback-6.jpg" alt="" />
+            <img src="https://i.ibb.co/zh4Hy2D/feedback-3.jpg" alt="" />
+          </div>
         </div>
       </div>
     </section>
@@ -1578,69 +1568,56 @@
         <div class="faq__box">
           <div class="accordion">
             <div class="accordion-item">
-              <div class="accordion-item-header">What is Web Development?</div>
+              <div class="accordion-item-header">
+                Какие основные преимущества в работе стриминг модели?
+              </div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  Web Development broadly refers to the tasks associated with
-                  developing functional websites and applications for the
-                  Internet. The web development process includes web design, web
-                  content development, client-side/server-side scripting and
-                  network security configuration, among other tasks.
+                  1. Удобный график работы.<br> 2. Возможность выучить разговорный
+                  английский.<br> 3. Возможность проявить свои таланты и артистизм.<br>
+                  4. Повышение самооценки за счет комплиментов зрителей.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
-              <div class="accordion-item-header">What is HTML?</div>
+              <div class="accordion-item-header">Кто может стать стриминг моделью?</div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  HTML, aka HyperText Markup Language, is the dominant markup
-                  language for creating websites and anything that can be viewed
-                  in a web browser.
+                  Мы приглашаем на работу девушек старше 18 лет. Поэтому стать моделью может почти каждая девушка! Именно наша задача сделать из тебя звезду. Поэтому не сомневайся и оставляй заявку.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <div class="accordion-item-header">
-                What are some basic technical skills of a Front-End developer?
+                Когда будет первая зарплата?
               </div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  <ul style="padding-left: 1rem">
-                    <li>HTML, CSS, JavaScript</li>
-                    <li>Frameworks (CSS and JavaScript frameworks)</li>
-                    <li>Responsive Design</li>
-                    <li>Version Control/Git</li>
-                    <li>Testing/Debugging</li>
-                    <li>Browser Developer Tools</li>
-                    <li>Web Performance</li>
-                    <li>SEO (Search Engine Optimization)</li>
-                    <!-- <li>CSS Preprocessing</li> -->
-                    <li>Command Line</li>
-                    <li>CMS (Content Management System)</li>
-                  </ul>
+                    В нашей студии модели получают зарплату 2 раза в месяц. Поэтому не стоит переживать за задержки и ожидания оплаты
                 </div>
               </div>
             </div>
             <div class="accordion-item">
-              <div class="accordion-item-header">What is HTTP?</div>
+              <div class="accordion-item-header">Какие требования ко мне могут быть?</div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  HTTP, aka HyperText Transfer Protocol, is the underlying
-                  protocol used by the World Wide Web and this protocol defines
-                  how messages are formatted and transmitted, and what actions
-                  Web servers and browsers should take in response to various
-                  commands.
+                  Мы не ставим моделей в жесткие рамки, однако просим соблюдать порядок на студии, вовремя приходить на работу, придерживаться графику. Благодаря небольшим требованиям на студии будет порядок, а работа будет идти продуктивнее.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
-              <div class="accordion-item-header">What is CORS?</div>
+              <div class="accordion-item-header">Я не знаю английский язык, что делать?</div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  CORS, aka Cross-Origin Resource Sharing, is a mechanism that
-                  enables many resources (e.g. images, stylesheets, scripts,
-                  fonts) on a web page to be requested from another domain
-                  outside the domain from which the resource originated.
+                  Начать работу можно и без знания английского языка. На сайтах есть встроенные переводчики, которые помогут в общении. А благодаря постоянному общению с иностранцами ты легко сможешь выучить разговорный английский
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <div class="accordion-item-header">Можно ли совмещать с учебой или другой работой?</div>
+              <div class="accordion-item-body">
+                <div class="accordion-item-body-content">
+                  Конечно! На студии график будем составлять под тебя. Поэтому сможешь легко совмещать и другие виды деятельности
                 </div>
               </div>
             </div>
