--- a/index.html
+++ b/index.html
@@ -1573,17 +1573,22 @@
               </div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  1. Удобный график работы.<br> 2. Возможность выучить разговорный
-                  английский.<br> 3. Возможность проявить свои таланты и артистизм.<br>
+                  1. Удобный график работы.<br />
+                  2. Возможность выучить разговорный английский.<br />
+                  3. Возможность проявить свои таланты и артистизм.<br />
                   4. Повышение самооценки за счет комплиментов зрителей.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
-              <div class="accordion-item-header">Кто может стать стриминг моделью?</div>
+              <div class="accordion-item-header">
+                Кто может стать стриминг моделью?
+              </div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  Мы приглашаем на работу девушек старше 18 лет. Поэтому стать моделью может почти каждая девушка! Именно наша задача сделать из тебя звезду. Поэтому не сомневайся и оставляй заявку.
+                  Мы приглашаем на работу девушек старше 18 лет. Поэтому стать
+                  моделью может почти каждая девушка! Именно наша задача сделать
+                  из тебя звезду. Поэтому не сомневайся и оставляй заявку.
                 </div>
               </div>
             </div>
@@ -1593,31 +1598,45 @@
               </div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                    В нашей студии модели получают зарплату 2 раза в месяц. Поэтому не стоит переживать за задержки и ожидания оплаты
+                  В нашей студии модели получают зарплату 2 раза в месяц.
+                  Поэтому не стоит переживать за задержки и ожидания оплаты
                 </div>
               </div>
             </div>
             <div class="accordion-item">
-              <div class="accordion-item-header">Какие требования ко мне могут быть?</div>
+              <div class="accordion-item-header">
+                Какие требования ко мне могут быть?
+              </div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  Мы не ставим моделей в жесткие рамки, однако просим соблюдать порядок на студии, вовремя приходить на работу, придерживаться графику. Благодаря небольшим требованиям на студии будет порядок, а работа будет идти продуктивнее.
+                  Мы не ставим моделей в жесткие рамки, однако просим соблюдать
+                  порядок на студии, вовремя приходить на работу, придерживаться
+                  графику. Благодаря небольшим требованиям на студии будет
+                  порядок, а работа будет идти продуктивнее.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
-              <div class="accordion-item-header">Я не знаю английский язык, что делать?</div>
+              <div class="accordion-item-header">
+                Я не знаю английский язык, что делать?
+              </div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  Начать работу можно и без знания английского языка. На сайтах есть встроенные переводчики, которые помогут в общении. А благодаря постоянному общению с иностранцами ты легко сможешь выучить разговорный английский
+                  Начать работу можно и без знания английского языка. На сайтах
+                  есть встроенные переводчики, которые помогут в общении. А
+                  благодаря постоянному общению с иностранцами ты легко сможешь
+                  выучить разговорный английский
                 </div>
               </div>
             </div>
             <div class="accordion-item">
-              <div class="accordion-item-header">Можно ли совмещать с учебой или другой работой?</div>
+              <div class="accordion-item-header">
+                Можно ли совмещать с учебой или другой работой?
+              </div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  Конечно! На студии график будем составлять под тебя. Поэтому сможешь легко совмещать и другие виды деятельности
+                  Конечно! На студии график будем составлять под тебя. Поэтому
+                  сможешь легко совмещать и другие виды деятельности
                 </div>
               </div>
             </div>
@@ -1654,7 +1673,10 @@
                 class="footer__soc-btn"
                 ><i class="fa fa-instagram" aria-hidden="true"></i
               ></a>
-              <a href="#" target="_blank" class="footer__soc-btn footer--big"
+              <a
+                href="https://t.me/hqmodelsstudio"
+                target="_blank"
+                class="footer__soc-btn footer--big"
                 ><i class="fa fa-telegram" aria-hidden="true"></i
               ></a>
             </p>
