add footer scroll to faq and feedback

--- a/index.html
+++ b/index.html
@@ -1703,6 +1703,12 @@
             <a href="#vacancies" class="footer__link scrollto footer--long2"
               >Вакансии</a
             >
+            <a href="#feedback" class="footer__link scrollto footer--long4"
+              >Отзывы</a
+            >
+            <a href="#faq" class="footer__link scrollto footer--long4"
+              >FAQ</a
+            >
             <p class="footer__copyright">
               © 2024 hqmodels.studio - All Rights Reserved
             </p>
