new feedback in new page

--- a/index.html
+++ b/index.html
@@ -187,8 +187,9 @@
       <a href="#benefits" class="menu__item scrollto">Преимущества</a>
       <a href="#conditions" class="menu__item scrollto">Условия</a>
       <a href="#duties" class="menu__item scrollto">О работе</a>
-      <a href="#vacancies" class="menu__item menu--last scrollto">Вакансии</a>
-      <a href="#faq" class="menu__item menu--last scrollto">FAQ</a>
+      <a href="#vacancies" class="menu__item scrollto">Вакансии</a>
+      <a href="#faq" class="menu__item scrollto">FAQ</a>
+      <a href="/feedback.html" class="menu__item menu--last scrollto">Отзывы</a>
       <a
         href="#"
         class="btn menu__request-btn visible-xs"
@@ -224,7 +225,9 @@
           <a href="#vacancies" class="menu__item menu--last scrollto"
             >Вакансии</a
           >
-          <a href="#feedback" class="menu__item menu--last scrollto">Отзывы</a>
+          <a href="/feedback.html" class="menu__item menu--last scrollto"
+            >Отзывы</a
+          >
           <a href="#faq" class="menu__item menu--last scrollto">FAQ</a>
           <a
             href="#"
@@ -1532,34 +1535,6 @@
         </div>
       </div>
     </section>
-    <section class="vacancies vacancies__feedback" id="feedback">
-      <div class="vacancies__line"></div>
-      <div class="vacancies__circle1"></div>
-      <div class="vacancies__circle2"></div>
-      <div class="vacancies__circle3"></div>
-      <div class="vacancies__circle4"></div>
-      <div class="container">
-        <h2 class="vacancies__h2">
-          <span class="c-ff869d">О</span><span class="c-ff93b7">т</span
-          ><span class="c-ff9bc9">з</span><span class="c-fda6da">ы</span
-          ><span class="c-f6acdf">в</span><span class="c-ebb0d9">ы</span>
-        </h2>
-        <div id="containerphoto">
-          <div class="photobanner">
-            <img
-              class="first"
-              src="https://i.ibb.co/0Yt15Jp/feedback-1.jpg"
-              alt=""
-            />
-            <img src="https://i.ibb.co/tPWrLjk/feedback-4.jpg" alt="" />
-            <img src="https://i.ibb.co/SBKrTFw/feedback-5.jpg" alt="" />
-            <img src="https://i.ibb.co/jkmv6db/feedback-7.jpg" alt="" />
-            <img src="https://i.ibb.co/vQtDG4S/feedback-6.jpg" alt="" />
-            <img src="https://i.ibb.co/zh4Hy2D/feedback-3.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-    </section>
     <section class="vacancies vacancies__faq" id="faq">
       <div class="vacancies__line"></div>
       <div class="vacancies__circle3"></div>
@@ -1710,7 +1685,7 @@
             <a href="#vacancies" class="footer__link scrollto footer--long2"
               >Вакансии</a
             >
-            <a href="#feedback" class="footer__link scrollto footer--long4"
+            <a href="/feedback.html" class="footer__link scrollto footer--long4"
               >Отзывы</a
             >
             <a href="#faq" class="footer__link scrollto footer--long4">FAQ</a>
