--- a/feedback.html
+++ b/feedback.html
@@ -303,8 +303,12 @@
                 src="https://i.ibb.co/vQtDG4S/feedback-6.jpg"
               />
               <img
-                class="img img-big img-last"
+                class="img img-big"
                 src="https://i.ibb.co/jkmv6db/feedback-7.jpg"
+              />
+              <img
+                class="img img-big img-last"
+                src="https://i.ibb.co/zh4Hy2D/feedback-3.jpg"
               />
             </div>
             <div class="responsive-container-block img-cont">
@@ -319,10 +323,6 @@
               <img
                 class="img img-big"
                 src="https://i.ibb.co/YZG3NXn/photo-2024-05-15-17-56-24.jpg"
-              />
-              <img
-                class="img img-big img-last"
-                src="https://i.ibb.co/zh4Hy2D/feedback-3.jpg"
               />
             </div>
           </div>
