--- a/index.html
+++ b/index.html
@@ -206,12 +206,7 @@
       <span class="menu-btn__line menu-btn--line3"></span>
     </a>
     <section
-      class="intro scrollme animateme"
-      data-when="span"
-      data-from="0"
-      data-to="1"
-      data-opacity="0"
-      data-translatey="-500"
+      class="intro"
     >
       <div class="container intro__container">
         <a href="#"><img src="img/logo.png" class="intro__logo" alt="" /></a>
