--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <a href="#duties" class="menu__item scrollto">О работе</a>
       <a href="#vacancies" class="menu__item scrollto">Вакансии</a>
       <a href="#faq" class="menu__item scrollto">FAQ</a>
-      <a href="/feedback.html" class="menu__item menu--last scrollto">Отзывы</a>
+      <a href="#feedback" class="menu__item menu--last scrollto">Отзывы</a>
       <a
         href="#"
         class="btn menu__request-btn visible-xs"
@@ -220,7 +220,7 @@
           <a href="#vacancies" class="menu__item menu--last scrollto"
             >Вакансии</a
           >
-          <a href="/feedback.html" class="menu__item menu--last scrollto"
+          <a href="#feedback" class="menu__item menu--last scrollto"
             >Отзывы</a
           >
           <a href="#faq" class="menu__item menu--last scrollto">FAQ</a>
@@ -1530,6 +1530,75 @@
         </div>
       </div>
     </section>
+
+    <section class="vacancies vacancies__feedback" id="feedback">
+      <div class="vacancies__line"></div>
+      <div class="vacancies__circle1"></div>
+      <div class="vacancies__circle2"></div>
+      <div class="vacancies__circle3"></div>
+      <div class="vacancies__circle4"></div>
+      <div class="container">
+        <h2 class="vacancies__h2">
+          <span class="c-ff869d">О</span><span class="c-ff93b7">т</span
+          ><span class="c-ff9bc9">з</span><span class="c-fda6da">ы</span
+          ><span class="c-f6acdf">в</span><span class="c-ebb0d9">ы</span>
+        </h2>
+        <div class="album">
+          <div class="responsive-container-block bg">
+            <div class="responsive-container-block img-cont">
+              <img class="img" src="https://i.ibb.co/2q98jFw/photo-2024-10-18-15-22-00.jpg" />
+              <img class="img" src="https://i.ibb.co/XZVrWJ0/photo-2024-10-18-15-22-04.jpg" />
+              <img class="img" src="https://i.ibb.co/c1DWXqX/photo-2024-10-18-15-22-05.jpg" />
+            </div>
+            <div class="responsive-container-block img-cont">
+              <img class="img" src="https://i.ibb.co/smxqKkD/photo-2024-10-18-15-22-05-2.jpg" />
+              <img class="img" src="https://i.ibb.co/749k5jb/photo-2024-10-18-15-22-06.jpg" />
+              <img class="img" src="https://i.ibb.co/MpxZgmX/photo-2024-10-18-15-22-07.jpg" />
+            </div>
+            <div class="responsive-container-block img-cont">
+              <img class="img" src="https://i.ibb.co/XxwjWrj/photo-2024-10-18-15-22-08.jpg" />
+              <img class="img" src="https://i.ibb.co/GTcHwjx/photo-2024-10-18-15-22-13-2.jpg" />
+              <img class="img" src="https://i.ibb.co/9Nz9Btt/photo-2024-10-18-15-22-10.jpg" />
+            </div> 
+        <!-- <div class="responsive-container-block img-cont">
+              <img class="img" src="https://i.ibb.co/bKqp5zT/photo-2024-10-18-15-22-11.jpg" />
+              <img class="img" src="https://i.ibb.co/ysF224Z/photo-2024-10-18-15-22-12.jpg" />
+              <img class="img" src="https://i.ibb.co/qR8njS9/photo-2024-10-18-15-22-13.jpg" />
+            </div> -->
+
+        <!-- <div class="responsive-container-block img-cont">
+              <img
+                class="img img-big"
+                src="https://i.ibb.co/vQtDG4S/feedback-6.jpg"
+              />
+              <img
+                class="img img-big"
+                src="https://i.ibb.co/jkmv6db/feedback-7.jpg"
+              />
+              <img
+                class="img img-big img-last"
+                src="https://i.ibb.co/zh4Hy2D/feedback-3.jpg"
+              />
+            </div>
+            <div class="responsive-container-block img-cont">
+              <img
+                class="img img-big"
+                src="https://i.ibb.co/XS1V9Hy/photo-2024-05-15-17-47-56.jpg"
+              />
+              <img
+                class="img img-big"
+                src="https://i.ibb.co/MnkpPDW/photo-2024-05-15-17-49-54.jpg"
+              />
+              <img
+                class="img img-big"
+                src="https://i.ibb.co/YZG3NXn/photo-2024-05-15-17-56-24.jpg"
+              />
+            </div> -->
+        <!-- </div> -->
+        <!-- </div> -->
+      </div>
+    </section>
+
     <section class="vacancies vacancies__faq" id="faq">
       <div class="vacancies__line"></div>
       <div class="vacancies__circle3"></div>
@@ -1680,7 +1749,7 @@
             <a href="#vacancies" class="footer__link scrollto footer--long2"
               >Вакансии</a
             >
-            <a href="/feedback.html" class="footer__link scrollto footer--long4"
+            <a href="#feedback" class="footer__link scrollto footer--long4"
               >Отзывы</a
             >
             <a href="#faq" class="footer__link scrollto footer--long4">FAQ</a>
