--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
       <a href="#conditions" class="menu__item scrollto">Условия</a>
       <a href="#duties" class="menu__item scrollto">О работе</a>
       <a href="#vacancies" class="menu__item scrollto">Вакансии</a>
-      <a href="#faq" class="menu__item scrollto">FAQ</a>
       <a href="#feedback" class="menu__item menu--last scrollto">Отзывы</a>
+      <a href="#faq" class="menu__item scrollto">FAQ</a>
       <a
         href="#"
         class="btn menu__request-btn visible-xs"
@@ -1544,59 +1544,24 @@
           ><span class="c-f6acdf">в</span><span class="c-ebb0d9">ы</span>
         </h2>
         <div class="album">
-          <div class="responsive-container-block bg">
+          <div class="responsive-container-block bg ">
             <div class="responsive-container-block img-cont">
-              <img class="img" src="https://i.ibb.co/2q98jFw/photo-2024-10-18-15-22-00.jpg" />
-              <img class="img" src="https://i.ibb.co/XZVrWJ0/photo-2024-10-18-15-22-04.jpg" />
-              <img class="img" src="https://i.ibb.co/c1DWXqX/photo-2024-10-18-15-22-05.jpg" />
+              <img class="img img_feedback" src="https://i.ibb.co/WHNs7sR/1.jpg" />
+              <img class="img img_feedback" src="https://i.ibb.co/D51srb1/2.jpg" />
             </div>
             <div class="responsive-container-block img-cont">
-              <img class="img" src="https://i.ibb.co/smxqKkD/photo-2024-10-18-15-22-05-2.jpg" />
-              <img class="img" src="https://i.ibb.co/749k5jb/photo-2024-10-18-15-22-06.jpg" />
-              <img class="img" src="https://i.ibb.co/MpxZgmX/photo-2024-10-18-15-22-07.jpg" />
+              <img class="img img_feedback" src="https://i.ibb.co/t3r9rwZ/3.jpg" />
+             
+              <img class="img img_feedback" src="https://i.ibb.co/ZXZfCCZ/6.png" />
             </div>
-            <div class="responsive-container-block img-cont">
-              <img class="img" src="https://i.ibb.co/XxwjWrj/photo-2024-10-18-15-22-08.jpg" />
-              <img class="img" src="https://i.ibb.co/GTcHwjx/photo-2024-10-18-15-22-13-2.jpg" />
-              <img class="img" src="https://i.ibb.co/9Nz9Btt/photo-2024-10-18-15-22-10.jpg" />
+            <div class="responsive-container-block img-cont">           
+              <img class="img img_feedback" src="https://i.ibb.co/P9KwhQB/5.jpg" />
+              <img class="img img_feedback" src="https://i.ibb.co/R7dHJMy/4.jpg" />
             </div> 
-        <!-- <div class="responsive-container-block img-cont">
-              <img class="img" src="https://i.ibb.co/bKqp5zT/photo-2024-10-18-15-22-11.jpg" />
-              <img class="img" src="https://i.ibb.co/ysF224Z/photo-2024-10-18-15-22-12.jpg" />
-              <img class="img" src="https://i.ibb.co/qR8njS9/photo-2024-10-18-15-22-13.jpg" />
-            </div> -->
-
-        <!-- <div class="responsive-container-block img-cont">
-              <img
-                class="img img-big"
-                src="https://i.ibb.co/vQtDG4S/feedback-6.jpg"
-              />
-              <img
-                class="img img-big"
-                src="https://i.ibb.co/jkmv6db/feedback-7.jpg"
-              />
-              <img
-                class="img img-big img-last"
-                src="https://i.ibb.co/zh4Hy2D/feedback-3.jpg"
-              />
-            </div>
-            <div class="responsive-container-block img-cont">
-              <img
-                class="img img-big"
-                src="https://i.ibb.co/XS1V9Hy/photo-2024-05-15-17-47-56.jpg"
-              />
-              <img
-                class="img img-big"
-                src="https://i.ibb.co/MnkpPDW/photo-2024-05-15-17-49-54.jpg"
-              />
-              <img
-                class="img img-big"
-                src="https://i.ibb.co/YZG3NXn/photo-2024-05-15-17-56-24.jpg"
-              />
-            </div> -->
-        <!-- </div> -->
-        <!-- </div> -->
       </div>
+      <div class="feedback__button"><a target="_blank" href="https://t.me/hqmodelsfeedback" class="telegram-button">
+        <span>Все отзывы в нашем канале</span>
+        <strong>Telegram</strong></a></div>
     </section>
 
     <section class="vacancies vacancies__faq" id="faq">
@@ -1822,10 +1787,10 @@
               >
                 <option disabled selected value="Город">Город</option>
                 <option value="Саратов">Саратов</option>
-                <option value="Саратов">Самара</option>
+                <option value="Самара">Самара</option>
                 <option value="Пенза">Пенза</option>
-                <option value="Саратов">Нижний Новгород</option>
-                <option value="Саратов">Калининград</option>
+                <option value="Нижний Новгород">Нижний Новгород</option>
+                <option value="Калининград">Калининград</option>
                 <option value="Воронеж">Воронеж</option>
                 <option value="Дзержинск">Дзержинск</option>
               </select>
@@ -1846,6 +1811,5 @@
     <script src="js/jquery.scrollme.min.js?ver=1.01"></script>
     <script src="js/jquery.appear.min.js?ver=1.01"></script>
     <script src="js/main.js?ver=1.01"></script>
-    <script src="//code.jivosite.com/widget/t4IugUqoYP" async></script>
-  </body>
+    </body>
 </html>
